--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+== 0.10 | DATE HERE ==
+* Improved documentation.
+* Improved performance.
+* Prevented the user from trying to start the rules engine while it's already running.
+* Minor API changes. clear_world and clear_code are now one option, clear
+
+
 == 0.9 | 2018-10-29 ==
 This release is for ProcJam 2018.
 
