--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+== 0.10.2 | TBD ==
+* Made two-way portals act more like they're one thing
+* Compatibility with msgpack 1.0.0
+* Fixed tutorial
+* Some under-the-hood changes to the stats widget
+* Compatibility fixes; drop support for Python <3.5
+
 == 0.10.1 | 2020-01-08 ==
 * Compatibility with networkx 2.4
 * Smaller database
