--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+== 0.11.1 | 2021-03-17 ==
+* Fix a flaw in the keyframes implementation that caused them to overwrite each other when several were made in a single session
+
 == 0.11 | 2021-02-03 ==
 * Add support for "keyframes," snapshots of the world state at some specific time. These are currently most useful for supplying the world's initial state by instantiating a Character with a networkx graph, eg. `engine.new_character('new', nx.grid_2d_graph(3, 3))`
     * Drastically improved load times for large initial world states
