--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+==0.13.2 | 2022-07-31 ==
+* Fix an intermittent error where entity deletion sometimes wouldn't go through all the way
+* Performance improvements
+
 == 0.13.0 | 2022-07-23 ==
 * ELiDE now has the Timestream view, easing time travel when history gets complicated
 * Rename "avatar" to "unit"
