--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 ==0.13.2 | 2022-07-31 ==
 * Fix an intermittent error where entity deletion sometimes wouldn't go through all the way
 * Performance improvements
+* LiSE now saves keyframes on close by default. Change ``keyframe_on_close`` to ``False`` to disable this
+* Renamed "modulus" options to end with "interval" instead
+* Disable the cache arranger by default
 
 == 0.13.0 | 2022-07-23 ==
 * ELiDE now has the Timestream view, easing time travel when history gets complicated
