--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+== 0.14.2 | 2023-04-27 ==
+* Fix the rest of the loader
+
 == 0.14.1 | 2023-04-26 ==
 * Fix a loading error when you make two keyframes and then start the engine before the first
 
