--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+== 0.15.3 | 2024-07-22 ==
+* More crash fixes
+
 == 0.15.2 | 2024-07-05 ==
 * Crash fixes involving time travel
 * Speed up interbranch time travel somewhat
