--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,13 @@
-== 0.16.2 | 2024-10-14 ==
+== 0.16.13 | 2024-10-16 ==
+* Fix worker process states getting desynchronized when you made a new character
+* Fix methods not being callable in worker processes
+* Improved performance when planning a lot of future state
+* Made the LiSE engine itself an Executor, which I guess breaks compatibility.
+	Whatever, zerover makes no promises. Use `Engine.submit(..)` to schedule
+	computation in worker processes now.
+* Made ELiDE's stat list scrollable
+
+== 0.16.2 & 0.16.12 | 2024-10-14 ==
 * Fix ELiDE crash when adding graph-shaped world state to a grid-shaped world
 
 == 0.16.1 | 2024-10-13 ==
