--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+== 0.16.16 | 2025-10-18 ==
+* Fix pawn duplication in ELiDE
+
 == 0.16.15 | 2025-10-16 ==
 * Fix a different way pawns could disappear in ELiDE
 
