--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-== 0.17.1 | 2024-11-09 ==
+== 0.17.1 | TBD ==
 * Disable editing all throughout ELiDE whenever the simulation is running.
   It was only disabled sometimes, in some parts of the UI.
 * Add a button to edit a function card without backing out of the rule editor
